--- a/TestimonialSlideButton/index.html
+++ b/TestimonialSlideButton/index.html
@@ -1,3 +1,4 @@
+<header>
 <h1><b><span class="white-text">What</span> 
       <span class="violet-text">Members</span> 
       <span class="white-text">Say</span></b></h1>
@@ -75,3 +76,4 @@
         <label for="slide4" class="carousel-button" id="slide4"></label>
         <label for="slide5" class="carousel-button" id="slide5"></label>
     </div>
+</header>
